@@ -22,6 +22,7 @@ Version 0.6
   you need header modifications before responses are sent.
 - :func:`append_slash_redirect` no longer requires the QUERY_STRING to be
   in the WSGI environment.
+- :class:`~werkzeug.contrib.wrappers.DynamicCharsetResponseMixin` was added.
 
 Version 0.5.1
 -------------
